:sparkles: feat: update UserMapper and UserService for static methods and improved readability